# ChangeLog for app-emulation/emul-linux-x86-baselibs
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emulation/emul-linux-x86-baselibs/ChangeLog,v 1.81 2007/11/16 17:21:36 kingtaco Exp $

  16 Nov 2007; Mike Doty <kingtaco@gentoo.org>
  emul-linux-x86-baselibs-20071114.ebuild:
  fixing manifest yet again, bug 199369

*emul-linux-x86-baselibs-20071114 (14 Nov 2007)

  14 Nov 2007; Mike Doty <kingtaco@gentoo.org>
  +emul-linux-x86-baselibs-20071114.ebuild:
  New emul-linux-x86-* build system.  Latest x86 stable packages.

  11 Nov 2007; Mike Doty <kingtaco@gentoo.org>
  files/digest-emul-linux-x86-baselibs-10.1,
  files/digest-emul-linux-x86-baselibs-10.2, Manifest:
  Manifest regeneration again, missed libperl on the last round.  bug 198751

  11 Nov 2007; Mike Doty <kingtaco@gentoo.org>
  -emul-linux-x86-baselibs-11.0.ebuild:
  Remove testing only 11.0 and refresh Manifest. bug #198751

*emul-linux-x86-baselibs-11.0 (10 Nov 2007)

  10 Nov 2007; Mike Doty <kingtaco@gentoo.org>
  +emul-linux-x86-baselibs-11.0.ebuild:
  Bump to 11.0, for internal testing only.  DO NOT USE

  29 Aug 2007; Christian Heim <phreak@gentoo.org> metadata.xml:
  Removing herbs from metadata due to his retirement (see #88780 for reference).

  02 Jul 2007; Piotr Jaroszyński <peper@gentoo.org>
  emul-linux-x86-baselibs-2.5.5-r3.ebuild:
  (QA) RESTRICT clean up.

  10 Mar 2007; Simon Stelling <blubb@gentoo.org> ChangeLog:
  repair ChangeLog

  02 Mar 2007; Simon Stelling <blubb@gentoo.org>
  -emul-linux-x86-baselibs-10.1-r1.ebuild,
  emul-linux-x86-baselibs-10.2.ebuild:
  stable on amd64; a bit preliminary as we need this in the 2007.0 release

*emul-linux-x86-baselibs-10.2 (27 Feb 2007)

  27 Feb 2007; Simon Stelling <blubb@gentoo.org>
  +emul-linux-x86-baselibs-10.2.ebuild:
  move giflib from medialibs to baselibs as gtklibs depends on it; bug 168501

  26 Feb 2007; Simon Stelling <blubb@gentoo.org>