@@ -10,6 +10,7 @@ DIST dbus-glib-0.72.tbz2 233589 RMD160 724830f790831ade98cd2f05f75b4ba08cd9ca6b 
 DIST dbus-qt3-old-0.70.tbz2 66969 RMD160 fce44c0e28d5be1888fd3b2ee9f4f37d629ebb50 SHA1 ca422709c9b320c1ef71384c5ad00e8de931b31d SHA256 f8d995ef95f4cb701ec8aebc6041d5d3154090313e67c955e10311f655557ea0
 DIST e2fsprogs-1.39.tbz2 625641 RMD160 7835954c56798e82b6998e4a86f8a8d0ebe6eb5e SHA1 fe26c3f0f724c9a9f614aa2107c234614df3881a SHA256 ef8b28441f1a9a326cbf9625a41a429f1fb1d467a3ac1b26ba46d7c35f7aad7e
 DIST emul-linux-x86-baselibs-20071114.tar.bz2 22165906 RMD160 56d6555ceec6017446be0ec863ee1b34a391c172 SHA1 f0823845c1c82086a4bb0b52ee17741cf188a2a3 SHA256 a86ca0f4b32306fdb79366754a67136bc64c20ca2b1cd692657bc9601d4c7e23
+DIST emul-linux-x86-baselibs-20071118.tar.bz2 22166653 RMD160 180526e5d9512662fddcb828224d860f3148f754 SHA1 9ec7378878bb96b37b4d1f253f38c935f42f053d SHA256 8d28ad750140fe44c65fc4f4ae0af52c74b1295f08d1964d49412462bdcddeec
 DIST expat-1.95.8.tbz2 182048 RMD160 b6b1a7c8a159196918fdc04cf0cb32d6bfd31792 SHA1 1ab1151d479f424f523dadbb26363574a5eb7a60 SHA256 90d022a2b64ac9b64c60905f2a4347fde076c93624412b3146c3abae9e9c9c3b
 DIST file-4.18.tbz2 295850 RMD160 ab40fc5b5b4b5fcd2f7538e14212b67fdab8f636 SHA1 ff66b335a9341fd0d3fe922bfdb76279cc3c8f43 SHA256 aeb624118ee42da094f0ad2d614c43f2df539f0890de4eb65c48f3d29cc50d69
 DIST gamin-0.1.8.tbz2 119544 RMD160 d55b3a559e9c5ff24e5008cdc61540f84d7c6919 SHA1 860d02d6a5cd7e9415ea2849e737e8ddea763bd6 SHA256 7a6a25e3ae91e5392f1c885cc368a058676aecbc7e9ffa0978eb4ef198e6e5b7
@@ -40,5 +41,6 @@ DIST tiff-3.8.2-r2.tbz2 679608 RMD160 d76ef0e93eed015e6bd71d090ad3bbbb538e5fa2 S
 DIST zlib-1.2.3-r1.tbz2 144220 RMD160 4570d2369f611d7d78e2a3ab4a68f2e55e2b7067 SHA1 8bccfbd9abeb3c1f4e773612e93d0c72cabe596c SHA256 ef8e3113fde60c1e68d9a52401558ee2d7089643e4ff09a0c636f979d26c554d
 EBUILD emul-linux-x86-baselibs-10.2.ebuild 2297 RMD160 300361ca07a2ae4ded265bbd372909af88f0257c SHA1 1bb6d139a7f167bcc3bc54ff1e04025d4411f3ec SHA256 7a1cf1b932481c81ca7ed81ae08e5090daab0322467f2c1c90dd1b8206446d22
 EBUILD emul-linux-x86-baselibs-20071114.ebuild 888 RMD160 45916b6d39673d2cd3f9550529085c965b8548d0 SHA1 a2890d2646a1395139abcfe3b8f490ce7481a358 SHA256 c322afd8c444ee87ffc3d7fd4ff54c83d5dee2ad5e96a57ccd9d49c792b8cec3
-MISC ChangeLog 14283 RMD160 cd3bd8049d79e3219c6d6f9d7c8017aebc23af11 SHA1 5c0dbffc02809efcfb11c76df839863678f1189c SHA256 957b83c1f47c2fe5395108a1db700863792c0e66b08df66b600ae0f31a84a285
+EBUILD emul-linux-x86-baselibs-20071118.ebuild 888 RMD160 384c13514438855bb1a98c33e918cea1e4cdf9dd SHA1 0beb5ba45f36f6995ee2b5a22606929e4dc7b7c0 SHA256 32453265d7f81d88e500eb617bcfd3a1ff74da2333df418b790ca46bca5b0e02
+MISC ChangeLog 14450 RMD160 81e1589dd2a31222bf21a9317454f666e63c989e SHA1 e498670613570d6fd9455ade1f94c94897563cdf SHA256 450b7a869875a606cd67b53af10b3ffd798a4eff2f687c8a32c5aa3d93d4df91
 MISC metadata.xml 226 RMD160 8b5e8dfb5cb187694ac54de32e888f915617761d SHA1 1cf50e178ffc19ba9c83c1440bb7affa225058a0 SHA256 ec696441bfd66c7ba1bd8f257fb8b28eebd35325a99a861becdcce4ab22fcb78
