@@ -1,6 +1,12 @@
 # ChangeLog for app-emulation/emul-linux-x86-baselibs
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/emul-linux-x86-baselibs/ChangeLog,v 1.81 2007/11/16 17:21:36 kingtaco Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/emul-linux-x86-baselibs/ChangeLog,v 1.82 2007/11/18 05:38:00 kingtaco Exp $
+
+*emul-linux-x86-baselibs-20071118 (18 Nov 2007)
+
+  18 Nov 2007; Mike Doty <kingtaco@gentoo.org>
+  +emul-linux-x86-baselibs-20071118.ebuild:
+  fixed lib32 dirname bug
 
   16 Nov 2007; Mike Doty <kingtaco@gentoo.org>
   emul-linux-x86-baselibs-20071114.ebuild:
